elements/rh-card/rh-card.css
article {
  position: relative;
  height: 100%;
  display: flex;
  flex-direction: column;
}

#header.empty,
#image.empty,
#footer.empty,
#body.empty {
  display: none !important;
}

::slotted(*) {
  line-height: inherit !important;
}

#container {
  align-self: stretch;
  display: flex;
  flex-direction: column;
  justify-items: flex-start;
  overflow: hidden;
  border-radius: var(--_border-radius, var(--rh-border-width-lg, 3px));
  font-family: var(--rh-font-family-body-text, RedHatText, "Red Hat Text", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif);
  line-height: var(--rh-line-height-body-text, 1.5);
  border-style: solid;
  border-width: var(--rh-border-width-sm, 1px);
}

#container,
#container.light {
  color: var(--rh-color-text-primary-on-light, #151515);
  background-color: var(--rh-color-surface-lightest, #ffffff);
  border-color: var(--rh-color-border-subtle-on-light, #c7c7c7);
}

#container.dark {
  background-color: var(--rh-color-surface-darkest, #151515);
  color: var(--rh-color-text-primary-on-dark, #ffffff);
  border-color: var(--rh-color-border-subtle-on-dark, #707070);
}

#container.darker {
  background-color: var(--rh-color-surface-darker, #1f1f1f);
}

#container.lighter {
  background-color: var(--rh-color-surface-lighter, #f2f2f2);
}

#header,
#body,
#footer {
  margin-inline: var(--rh-space-xl, 24px);
}

#header ::slotted(:is(h1, h2, h3, h4, h5, h6)),
#body ::slotted(:is(h1, h2, h3, h4, h5, h6)) {
  font-family: var(--rh-font-family-heading, RedHatDisplay, "Red Hat Display", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif);
}

#header {
  display: flex;
  flex-direction: column;
  gap: var(--rh-space-lg, 16px);
  box-sizing: border-box;
  font-family: var(--rh-font-family-heading, RedHatDisplay, "Red Hat Display", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif);
  font-size: var(--rh-card-header-font-size, var(--rh-font-size-heading-sm, 1.5rem));
  margin-block-start: var(--rh-space-lg, 16px);
}

#body {
  margin-block: var(--rh-space-2xl, 32px) var(--rh-space-xl, 24px);
}

#body:has(+ .empty) {
  margin-block-end: var(--rh-space-2xl, 32px);
}

#footer {
  display: flex;
  gap: 0.5em;
  margin-block: auto var(--rh-space-xl, 24px);
}

#header ::slotted(:is(h1, h2, h3, h4, h5, h6)) {
  margin: unset;
  font-weight: var(--rh-font-weight-body-text-medium, 500);
  font-size: inherit;
}

#body ::slotted(:not([slot]):first-child) {
  margin-block-start: 0;
}

#body ::slotted(:not([slot]):last-child) {
  margin-block-end: 0;
}

@media (min-width: 768px) {
  #header,
  #body,
  #footer {
    margin-inline: var(--rh-space-2xl, 32px);
  }

  #header,
  #body {
    margin-block-start: var(--rh-space-2xl, 32px);
  }

  #footer {
    margin-block-end: var(--rh-space-2xl, 32px);
  }
}

.has-image.has-header #image {
  order: -1;
}

.has-header.has-body #body {
  margin-block-start: var(--rh-space-lg, 16px);
}

/*****************************************************************************
 * INLINE PROMO
 *****************************************************************************/
:host([variant~="inline-promo"]) {
  container: inline-promo / inline-size;
  display: block;
}

::slotted([slot="image"]:is(img, svg)) {
  display: block;
  max-width: 100%;
}

:host([variant~="inline-promo"]) #image {
  order: 10;
  width: 100%;
}

:host([variant~="inline-promo"]) #body ::slotted(h2) {
  margin-block-start: 0;
}

@container inline-promo (min-width: 768px) {
  :host([variant~="inline-promo"]) #container {
    align-items: center;
    display: grid;
    grid-template-columns: 1fr 2fr;
    min-height: 250px;
  }

  :host([variant~="inline-promo"]) #image {
    order: 0;
  }

  :host([variant~="inline-promo"]) #body {
    max-width: 75ch;
  }

  :host([variant~="inline-promo"]) #body ::slotted(h2) {
    font-size: var(--rh-font-size-body-text-2xl, 1.5rem);
  }

  :host([variant~="inline-promo"]) #body ::slotted(p) {
    font-size: var(--rh-font-size-body-text-lg, 1.125rem);
  }
}

